# OpenEnv

./: .gitignore  Dockerfile  README.md  app.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
